--- a/Mission06_OliverEscobar/Views/Home/Index.cshtml
+++ b/Mission06_OliverEscobar/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
     <img src="~/joelhiltonheadshot.jpg" />
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<p>this is test</p>
