--- a/Mission06_OliverEscobar/Views/Home/MovieList.cshtml
+++ b/Mission06_OliverEscobar/Views/Home/MovieList.cshtml
@@ -3,7 +3,7 @@
 }
 @model List<Application>
 
-<table>
+<table class="table table-striped">
     <thead class="fw-bold">
         <tr>
             <td>Movie ID</td>
@@ -15,6 +15,8 @@
             <td>Edited</td>
             <td>Lent</td>
             <td>Notes</td>
+            <td>Edit</td>
+            <td>Delete</td>
         </tr>
     </thead>
 
