--- a/Mission06_OliverEscobar/Views/Home/Delete.cshtml
+++ b/Mission06_OliverEscobar/Views/Home/Delete.cshtml
@@ -8,6 +8,7 @@
 <h2>Confirm Deletion</h2>
 <h3>@Model.Title, @Model.Year</h3>
 <form asp-controller="Home" asp-action="Delete" method="post">
+    <input type="hidden" asp-for="MovieId" />
     <button type="submit">Delete</button>
     <a class="btn btn-info" asp-controller="Home" asp-action="MovieList">Cancel</a>
 </form>
